--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-mlflow==2.15.1
-cloudpickle==2.2.1
 numpy==1.26.4
 psutil==5.9.0
 scikit-learn==1.3.0
 scipy==1.13.0
+fastapi==0.100.1
+uvicorn==0.23.2
+pydantic==2.7.0
